--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "parse-opt-args",
   "version": "0.1.0",
   "description": "Parser for command-line-style options in strings",
-  "main": "src/parseArgs.js",
+  "main": "src/parseOptArgs.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/wakfi/parse-opt-args.git"
   },
-  "author": "wakfi",
+  "author": "Walker Gray <walkergraydev@outlook.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/wakfi/parse-opt-args/issues"
