--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/wakfi/parse-opt-args/issues"
   },
-  "homepage": "https://github.com/wakfi/parse-opt-args#readme"
+  "homepage": "https://github.com/wakfi/parse-opt-args#readme",
+  "packageManager": "yarn@3.2.0",
+  "devDependencies": {
+    "typescript": "^4.6.3"
+  }
 }
