Use .ts type declaration file
TSC wasn't emitting my fancy types. Sadness.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "scripts": {
     "prepack": "yarn build",
-    "build": "tsc && cp src/types.d.ts dist/src",
+    "build": "tsc",
     "typecheck": "tsc --noEmit"
   },
   "repository": {
