--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "prepack": "yarn build",
     "build": "tsc",
+    "lint": "eslint .",
     "typecheck": "tsc --noEmit"
   },
   "repository": {
@@ -22,6 +23,9 @@
   "homepage": "https://github.com/wakfi/parse-opt-args#readme",
   "packageManager": "yarn@3.2.0",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
+    "eslint": "^8.12.0",
     "typescript": "^4.6.3"
   }
 }
